--- a/GE.WebUI/Views/Search/List.cshtml
+++ b/GE.WebUI/Views/Search/List.cshtml
@@ -12,10 +12,10 @@
         switch(item.ModelCoreType)
         {
             case SX.WebCore.Enums.ModelCoreType.Article:
-                url = Url.Action(MVC.Articles.Details(item.DateCreate.Year, item.DateCreate.Month.ToString("00"), item.DateCreate.Day.ToString("00"), item.TitleUrl));
+                url = Url.Action("Details", "Articles", new { year = item.DateCreate.Year, month = item.DateCreate.Month.ToString("00"), day = item.DateCreate.Day.ToString("00"), titleUrl=item.TitleUrl });
                 break;
             case SX.WebCore.Enums.ModelCoreType.News:
-                url = Url.Action(MVC.News.Details(item.DateCreate.Year, item.DateCreate.Month.ToString("00"), item.DateCreate.Day.ToString("00"), item.TitleUrl));
+                url = Url.Action("Details", "News", new { year = item.DateCreate.Year, month = item.DateCreate.Month.ToString("00"), day = item.DateCreate.Day.ToString("00"), titleUrl = item.TitleUrl });
                 break;
         }
         <div class="search-item">
