--- a/GE.WebUI/Views/Shared/_Share42.cshtml
+++ b/GE.WebUI/Views/Shared/_Share42.cshtml
@@ -1,4 +1,4 @@
-﻿@model GE.WebUI.Models.Abstract.VMDetailMaterial
+﻿@model VMDetailMaterial
 @using SX.WebCore;
 
 @{
@@ -6,4 +6,4 @@
 }
 
 <label>Поделиться</label>
-<div class="share42init" data-url="@Request.Url" data-title="@Model.Title" data-description="@Model.Foreword" data-image="@(Model.FrontPictureId.HasValue ? Url.ContentAbsUrl(Url.Action(MVC.Pictures.Picture((Guid)Model.FrontPictureId))) : null)"></div>
+<div class="share42init" data-url="@Request.Url" data-title="@Model.Title" data-description="@Model.Foreword" data-image="@(Model.FrontPictureId.HasValue ? Url.ContentAbsUrl(Url.Action("Picture","Pictures",new { id=Model.FrontPictureId})) : null)"></div>
