--- a/GE.WebAdmin/Views/FAQ/Index.cshtml
+++ b/GE.WebAdmin/Views/FAQ/Index.cshtml
@@ -1,21 +1,22 @@
 ﻿@model SxVMFAQ[]
 @{
     ViewBag.Title = "FAQ";
+    SxVMFAQ item;
 }
 
 <h2>@ViewBag.Title</h2>
 
 <div class="row">
     <div class="col-md-2">
-        @*@Html.Action(MVC.MaterialCategories.TreeViewMenu(mct: SX.WebCore.Enums.ModelCoreType.Manual))*@
+        @Html.Action("TreeViewMenu", "MaterialCategories", new { mct = Enums.ModelCoreType.Manual })
     </div>
     <div class="col-md-10">
-        @if(Model.Any())
+        @if (Model.Any())
         {
             for (int i = 0; i < Model.Length; i++)
             {
-                var faq = Model[i];
-                @Html.DisplayFor(x=>faq)
+                item = Model[i];
+                @Html.DisplayFor(x => item)
             }
         }
     </div>
