--- a/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
+++ b/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
@@ -8,6 +8,7 @@
         ViewsCount = Model.ViewsCount
     };
 
+    var url = Model.Url(Url);
     var picureId = Model.FrontPictureId != null ? Model.FrontPictureId : (Model.Game != null ? Model.Game.BadPictureId : Guid.Empty);
 }
 
@@ -32,7 +33,7 @@
         </div>
     }
 
-    <a class="link" href="@Model.Url(Url)" title="@Model.Title">@Model.Title</a>
+    <a class="link" href="@url" title="@Model.Title">@Model.Title</a>
     <p class="foreword">
         @Model.Foreword
     </p>
