--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
     var siteName = GE.WebUI.Infrastructure.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName);
-    var logoUrl = GE.WebUI.Infrastructure.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath);
+    var logoUrl = Url.Action("Picture", "Pictures", new { id = GE.WebUI.Infrastructure.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath) });
 }
 <footer>
     <div class="shadow"></div>
@@ -78,7 +78,7 @@
                 <div class="col-md-3">
                     <div class="first">
                         <a href="/">
-                            <img alt="@siteName.Value" src="@logoUrl.Value">
+                            <img alt="@siteName.Value" src="@logoUrl">
                         </a>
                     </div>
                 </div>
