--- a/GE.WebAdmin/Views/SiteTests/Edit.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/Edit.cshtml
@@ -4,6 +4,33 @@
     ViewBag.Title = Model.Id == 0 ? "Добавить тест сайта" : "Редактировать тест \"" + Model.Title + "\"";
 }
 
+@section styles{
+    <link href="~/content/dist/css/lightbox.min.css" rel="stylesheet" />
+    <style type="text/css">
+        #grid-test-subjects tbody > tr > td:last-child{
+            width:70px;
+            vertical-align:middle;
+            text-align:center;
+        }
+        #matrix{
+            overflow:hidden;
+            max-height:100%;
+            overflow-x:auto;
+            margin-top:15px;
+        }
+
+        #matrix td{
+            text-align:center;
+            vertical-align:middle;
+            cursor:pointer;
+        }
+
+        #matrix td:not(.matrix__first-column):active{
+            background-color:#DFF0D8;
+        }
+    </style>
+}
+
 <h2>@ViewBag.Title</h2>
 
 
@@ -28,106 +55,253 @@
     </div>
 </div>
 
+<ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#general" aria-controls="general" role="tab" data-toggle="tab">Основные параметры</a></li>
+    <li role="presentation"><a href="#subjects" aria-controls="subjects" role="tab" data-toggle="tab">Объекты теста</a></li>
+    <li role="presentation"><a href="#questions" aria-controls="questions" role="tab" data-toggle="tab">Вопросы теста</a></li>
+    <li role="presentation"><a href="#matrix" aria-controls="matrix" role="tab" data-toggle="tab">Матрица ответов</a></li>
+</ul>
 
-<form method="post" action="edit">
-    @Html.AntiForgeryToken()
-    @Html.HiddenFor(x => x.Id)
+<div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="general">
+        <br />
+        <form method="post" action="edit">
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(x => x.Id)
 
-    <div class="row">
-        <div class="col-md-8">
-            <div class="form-group">
-                @Html.LabelFor(x => x.Title, new { @class = "control-label" })
-                @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(x => x.Title)
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                @Html.LabelFor(x => x.TestType, new { @class = "control-label" })
-                @if (isNew)
-                {
-                    @Html.EnumDropDownListFor(x => x.TestType, new { @class = "form-control" })
-                }
-                else
-                {
-                    @Html.HiddenFor(x => x.TestType)
-                    @Html.EnumDropDownListFor(x => x.TestType, new { @class = "form-control", @disabled = "disabled" })
-                }
-                @Html.ValidationMessageFor(x => x.TestType)
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                @Html.LabelFor(x => x.Show, new { @class = "control-label" })
-                @Html.EditorFor(x => x.Show, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(x => x.Show)
-            </div>
-        </div>
-    </div>
-
-    @if (!isNew && User.IsInRole("architect"))
-    {
-        <div class="form-group">
-            @Html.LabelFor(x => x.TitleUrl, new { @class = "control-label" })
-            <span class="text-info"> (применяется для уникальной идентификации материала)</span>
-            @Html.EditorFor(x => x.TitleUrl, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(x => x.TitleUrl)
-        </div>
-    }
-
-    <div class="form-group">
-        @Html.LabelFor(x => x.Description, new { @class = "control-label" })
-        @Html.EditorFor(x => x.Description, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(x => x.Description)
-    </div>
-
-    <div class="modal fade" id="matrixModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel"><b>@Model.Title</b>. Матрица ответов теста</h4>
+            <div class="row">
+                <div class="col-md-10">
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.Title, new { @class = "control-label" })
+                        @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(x => x.Title)
+                    </div>
                 </div>
-                <div class="modal-body" style="overflow:hidden; overflow-y:scroll; overflow-x:scroll; max-height:800px;">
-                    
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        @Html.LabelFor(x => x.Show, new { @class = "control-label" })
+                        @Html.EditorFor(x => x.Show, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(x => x.Show)
+                    </div>
                 </div>
             </div>
+
+            @if (!isNew && User.IsInRole("architect"))
+            {
+            <div class="form-group">
+                @Html.LabelFor(x => x.TitleUrl, new { @class = "control-label" })
+                <span class="text-info"> (применяется для уникальной идентификации материала)</span>
+                @Html.EditorFor(x => x.TitleUrl, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.TitleUrl)
+            </div>
+            }
+
+            <div class="form-group">
+                @Html.LabelFor(x => x.Description, new { @class = "control-label" })
+                @Html.EditorFor(x => x.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.Description)
+            </div>
+
+            <div class="modal fade" id="matrixModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="myModalLabel"><b>@Model.Title</b>. Матрица ответов теста</h4>
+                        </div>
+                        <div class="modal-body" style="overflow:hidden; overflow-y:scroll; overflow-x:scroll; max-height:800px;">
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">@(Model.Id == 0 ? "Добавить" : "Сохранить")</button>
+                @Html.RouteLink("Назад", new { action = "Index" }, new { @class = "btn btn-default" })
+            </div>
+        </form>
+    </div>
+    <div role="tabpanel" class="tab-pane" id="subjects">
+        <br />
+        <div id="grid-test-subjects">
+
         </div>
     </div>
+    <div role="tabpanel" class="tab-pane" id="questions">
+        <br />
+        <div id="grid-test-questions">
 
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">@(Model.Id == 0 ? "Добавить" : "Сохранить")</button>
-        @if (!isNew && Model.TestType == SX.WebCore.SxSiteTest.SiteTestType.GuessYesNo)
-        {
-            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#matrixModal">Матрица ответов</button>
-        }
-        @Html.RouteLink("Назад", new { action = "Index" }, new { @class = "btn btn-default" })
+        </div>
     </div>
-</form>
+    <div role="tabpanel" class="tab-pane" id="matrix">
+        <div id="matrix">
+
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="test-modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 @section scripts{
+    <script src="~/content/dist/js/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/content/dist/js/jquery.validate.min.js"></script>
+    <script src="~/content/dist/js/jquery.validate.unobtrusive.min.js"></script>
+    <script type="text/javascript" src="~/bower_components/ckeditor/ckeditor.js"></script>
+    <script src="~/content/dist/js/lightbox.min.js"></script>
     <script>
         $(function () {
-            $('#ofd-btn').click(function(){
-                $file=$(this).prev('form').find('input[type="file"]');
-                $file.change(function(){
-                    $(this).closest('form').submit();
-                });
-                $file.click();
-            });
+            if (CKEDITOR.instances['Description']) {
+                CKEDITOR.remove(CKEDITOR.instances['Description']);
+            }
+            CKEDITOR.replace('Description', { height: 400 });
 
-            $('#matrixModal').on('show.bs.modal', function (e) {
+            $('a[href="#questions"]').on('shown.bs.tab', function (e) {
                 $.ajax({
-                    method: 'get',
-                    url:'/sitetests/testmatrix?testId='+@Model.Id,
-                    success:function(data){
-                        $('#matrixModal .modal-body').html(data);
+                    method: 'post',
+                    url: '/sitetestquestions?testId='+@Model.Id,
+                    success:function(result){
+                        $('#grid-test-questions').html(result);
                     }
                 });
             })
+
+            $('a[href="#subjects"]').on('shown.bs.tab', function (e) {
+                $.ajax({
+                    method: 'post',
+                    url: '/sitetestsubjects?testId='+@Model.Id,
+                    success:function(result){
+                        $('#grid-test-subjects').html(result);
+                    }
+                });
+            })
+
+            $('a[href="#matrix"]').on('shown.bs.tab', function (e) {
+                $.ajax({
+                    method: 'get',
+                    url: '/sitetests/testmatrix?testId='+@Model.Id,
+                    success:function(result){
+                        $('#matrix').html(result);
+                    }
+                });
+            })
+
+            $('#grid-test-questions, #grid-test-subjects').sx_gv();
+
+            $('#grid-test-subjects').on('click', '.sx-gv__create-btn', function(){
+                $modal=$('#test-modal');
+                $header=$modal.find('.modal-header h4');
+                $body=$modal.find('.modal-body');
+                $header.html('Добавить объект теста "@Model.Title"');
+                var href=$(this).attr('href');
+                $.ajax({
+                    method:'get',
+                    url:href,
+                    success:function(result)
+                    {
+                        $body.html(result);
+                    },
+                    complete:function(){
+                        if (CKEDITOR.instances['subject.Description']) {
+                            CKEDITOR.remove(CKEDITOR.instances['subject.Description']);
+                        }
+                        CKEDITOR.replace('subject.Description', { height: 400 });
+                        $body.find('#PictureId').sx_gvl();
+                        $modal.modal('show');
+                    }
+                });
+
+                return false;
+            });
+
+            $('#grid-test-questions').on('click', '.sx-gv__create-btn', function(){
+                $modal=$('#test-modal');
+                $header=$modal.find('.modal-header h4');
+                $body=$modal.find('.modal-body');
+                $header.html('Добавить вопрос теста "@Model.Title"');
+                var href=$(this).attr('href');
+                $.ajax({
+                    method:'get',
+                    url:href,
+                    success:function(result)
+                    {
+                        $body.html(result);
+                    },
+                    complete:function(){
+                        $modal.modal('show');
+                    }
+                });
+
+                return false;
+            });
+
+            $('#grid-test-subjects').on('click', '.sx-gv__edit-btn', function(){
+                $modal=$('#test-modal');
+                $header=$modal.find('.modal-header h4');
+                $body=$modal.find('.modal-body');
+                $header.html('Редактировать объект теста "@Model.Title"');
+                var href=$(this).attr('href');
+                $.ajax({
+                    method:'get',
+                    url: href,
+                    success:function(result)
+                    {
+                        $body.html(result);
+                    },
+                    complete:function(){
+                        if (CKEDITOR.instances['subject.Description']) {
+                            CKEDITOR.remove(CKEDITOR.instances['subject.Description']);
+                        }
+                        CKEDITOR.replace('subject.Description', { height: 400 });
+                        $body.find('#PictureId').sx_gvl();
+                        $modal.modal('show');
+                    }
+                });
+
+                return false;
+            });
+
+            $('#grid-test-questions').on('click', '.sx-gv__edit-btn', function(){
+                $modal=$('#test-modal');
+                $header=$modal.find('.modal-header h4');
+                $body=$modal.find('.modal-body');
+                $header.html('Редактировать вопрос теста "@Model.Title"');
+                var href=$(this).attr('href');
+                $.ajax({
+                    method:'get',
+                    url: href,
+                    success:function(result)
+                    {
+                        $body.html(result);
+                    },
+                    complete:function(){
+                        $modal.modal('show');
+                    }
+                });
+
+                return false;
+            });
+
+            $('#matrix').on('click', 'td:not(.matrix__first-column)', function(){
+                alert();
+            });
         });
     </script>
 }
