--- a/GE.WebAdmin/Views/SiteTests/_Matrix.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/_Matrix.cshtml
@@ -1,42 +1,42 @@
-﻿@model SxVMSiteTestQuestion[]
-@{
-    Layout = null;
-    var blocks = Model.GroupBy(x => x.Block).Select(x => new { BlockId = x.Key.Id, Title = x.Key.Title }).Distinct().OrderBy(x => x.Title).ToArray();
-    var questions = Model.Select(x => new { Text = x.Text }).Distinct().OrderBy(x => x.Text).ToArray();
-    dynamic block = null;
-    dynamic question = null;
-}
-@if (Model.Any())
+﻿@model System.Data.DataTable
+@if (Model != null)
 {
-    <table class="table table-striped table-bordered">
+    <table class="table table-condensed table-bordered table-responsive table-striped">
         <thead>
             <tr>
-                <th colspan="2">Блок теста</th>
-                @for (int i = 0; i < questions.Length; i++)
+                @foreach (System.Data.DataColumn column in Model.Columns)
                 {
-                    question = questions[i];
-                    <th style="max-width:150px;">@question.Text</th>
+                    <th>
+                        @if (column == Model.Columns[0])
+                        {
+
+                        }
+                        else
+                        {
+                            @column.Caption
+                        }
+                    </th>
                 }
             </tr>
         </thead>
         <tbody>
-            @for (int i = 0; i < blocks.Length; i++)
+            @foreach (System.Data.DataRow row in Model.Rows)
             {
-                block = blocks[i];
                 <tr>
-                    <td>
-                        <a href="#" style="color:#000;"><i class="fa fa-pencil"></i></a>
-                    </td>
-                    <td>
-                         @block.Title
-                    </td>
-                    @for (int y = 0; y < questions.Length; y++)
+                    @foreach (System.Data.DataColumn column in Model.Columns)
                     {
-                        question = questions[y];
-                        question = Model.SingleOrDefault(x => Equals(x.Text, question.Text) && Equals(x.Block.Id, block.BlockId));
-                        <td style="text-align:center;">
-                            @(question.IsCorrect ? Html.Raw("<b class=\"text-success\"><u>Да</u></b>") : Html.Raw("<span>Нет</span>"))
-                        </td>
+                        if (column == Model.Columns[0])
+                        {
+                            <td class="matrix__first-column">
+                                @row[column.ColumnName]
+                            </td>
+                        }
+                        else
+                        {
+                            <td>
+                                @row[column.ColumnName]
+                            </td>
+                        }
                     }
                 </tr>
             }
