--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -22,9 +22,9 @@
     <a href="@Url.Action("list", "news")" class="btn btn-default btn-transparent white">Все новости</a>
 </div>
 
-<section>
+@*<section>
     @Html.Action("randomlist", "sitetests")
-</section>
+</section>*@
 
 @Html.Action("ForGamersBlock", "Articles")
 
