--- a/GE.WebUI/Views/SiteTests/Details.cshtml
+++ b/GE.WebUI/Views/SiteTests/Details.cshtml
@@ -13,6 +13,7 @@
     </div>
 
     @section scripts{
+        <script src="~/content/dist/js/jquery.unobtrusive-ajax.min.js"></script>
         <script type="text/javascript" src="~/share42/share42.js"></script>
         <script>
             $(function () {
