--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -381,18 +381,7 @@
                         @if (User.IsInRole("admin"))
                         {
                             <li>
-                                <a href="#"><i class="fa fa-university fa-fw"></i> Тесты<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="@Url.Action("Index", new { controller= "SiteTests" })"> Список тестов</a>
-                                    </li>
-                                    <li>
-                                        <a href="@Url.Action("Index", new { controller= "SiteTestBlocks" })"> Блоки тестов</a>
-                                    </li>
-                                    <li>
-                                        <a href="@Url.Action("Index", new { controller= "SiteTestQuestions" })"> Вопросы тестов</a>
-                                    </li>
-                                </ul>
+                                <a href="@Url.Action("Index", new { controller= "SiteTests" })"><i class="fa fa-unlock-alt fa-fw"></i> Тесты</a>
                             </li>
                         }
                         @if (User.IsInRole("seo"))
