--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -29,7 +29,6 @@
                         <li><a href="@Url.Action("List", "Articles")">Почитать статьи</a></li>
                         <li><a href="@Url.Action("List", "Aphorisms")">Кратко о главном</a></li>
                         <li><a href="@Url.Action("Edit", "SiteQuetions")">Обратная связь</a></li>
-                        @*<li><a href="#">Почитать форум</a></li>*@
                     </ul>
                 </li>
                 <li>
@@ -40,6 +39,12 @@
                 </li>
                 <li>
                     <a href="@Url.Action("List", "Aphorisms")">Кратко</a>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Развлечения <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="@Url.Action("List", "SiteTests")">Тесты</a></li>
+                    </ul>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
